Aggiunta caratteri accentati

--- a/src/abstract/abstract.tex
+++ b/src/abstract/abstract.tex
@@ -1,1 +1,1 @@
-La cantina \emph{Nome cantina} venne fondata nel 1867 da due agricoltori Padovani accomunati dalla comune passione per il vino del proprio territorio. Sin dal primo momento ricevettero un notevole apprezzamento, tanto da diventare in pochi anni icona del vino in Italia. A partire dalla seconda meta' degli anni '90 la cantina inizio' un lungo percorso di modernizzazione circolare, con lo scopo principale di consolidare il proprio status di leader nel settore, oltre che di migliorare le condizioni lavorative dei propri dipendenti. Tale processo innovativo prevede oggi la digitalizzazione di tutte le attivita' non manuali in modo da poter rendere la tracciabilita' dei propri prodotti piu' trasparente e affidabile. Nell'ultimo anno inoltre si e' manifestata la volonta' di cavalcare il trend dell'e-commerce permettendo quindi ai privati di acquistare direttamente dalla cantina attraverso un negozio online oltre che nei soliti punti vendita sparsi in tutta Italia. La base di dati che si vuole modellare ha lo scopo di supportare l'operativita' della cantina, tenendo traccia delle materie prime acquistate, degli ordini ricevuti e dell'organizzazione dei vari reparti produttivi.
+La cantina \emph{Nome cantina} venne fondata nel 1867 da due agricoltori Padovani accomunati dalla comune passione per il vino del proprio territorio. Sin dal primo momento ricevettero un notevole apprezzamento, tanto da diventare in pochi anni icona del vino in Italia. A partire dalla seconda metà degli anni '90 la cantina iniziò un lungo percorso di modernizzazione circolare, con lo scopo principale di consolidare il proprio status di leader nel settore, oltre che di migliorare le condizioni lavorative dei propri dipendenti. Tale processo innovativo prevede oggi la digitalizzazione di tutte le attività non manuali in modo da poter rendere la tracciabilità dei propri prodotti più trasparente e affidabile. Nell'ultimo anno inoltre si è manifestata la volontà di cavalcare il trend dell'e-commerce permettendo quindi ai privati di acquistare direttamente dalla cantina attraverso un negozio online oltre che nei soliti punti vendita sparsi in tutta Italia. La base di dati che si vuole modellare ha lo scopo di supportare l'operatività della cantina, tenendo traccia delle materie prime acquistate, degli ordini ricevuti e dell'organizzazione dei vari reparti produttivi.
