--- a/src/analisiRequisiti/glossario_termini.tex
+++ b/src/analisiRequisiti/glossario_termini.tex
@@ -21,7 +21,7 @@
 		Vigneto & & Rappresenta il vigneto dalla quale proviene un determinato lotto di uva acquistato. &  Tipo Uva\\
 
 		\midrule
-		Acquirente & & Colui che ha effettuato l'ordine. Puo' essere un privato o un'azienda &  Ordine, Privato, Azienda\\
+		Acquirente & & Colui che ha effettuato l'ordine. Può essere un privato o un'azienda &  Ordine, Privato, Azienda\\
 
 		\midrule
 		Azienda & Fornitore, Negozio interno, Corriere & Un'azienda con cui la cantina ha rapporti, siano questi di fornitura, di vendita o di altra natura. &  Azienda manutenzione, Negozio interno, Fornitore\\
@@ -36,7 +36,7 @@
 		Linea produttiva & & Un reparto produttivo interno alla cantina. &  Dipendente, Macchinario\\
 
 		\midrule
-		Dipendente & & Colui che lavora per la cantina ed e' assegnato ad una linea produttiva &  Linea produttiva\\
+		Dipendente & & Colui che lavora per la cantina ed è assegnato ad una linea produttiva &  Linea produttiva\\
 
 		\midrule
 		Macchinario & & Strumento utilizzato all'interno di una linea produttiva &  Linea produttiva\\
