--- a/src/analisiRequisiti/strutturazione_requisiti.tex
+++ b/src/analisiRequisiti/strutturazione_requisiti.tex
@@ -3,7 +3,7 @@
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A BOTTIGLIA DI VINO}} \\
 		\midrule
-		Una bottiglia di vino e' il prodotto finale che viene venduto dalla cantina, e rappresenta l'unione di una bottiglia di vetro, di un tappo e di un tipo di vino. Ogni bottiglia e' caratterizzata dal suo prezzo, dal numero di unita' uguali prodotte e vendute, oltre che dal tipo di tappo e dal tipo di bottiglia 
+		Una bottiglia di vino è il prodotto finale che viene venduto dalla cantina, e rappresenta l'unione di una bottiglia di vetro, di un tappo e di un tipo di vino. Ogni bottiglia è caratterizzata dal suo prezzo, dal numero di unità uguali prodotte e vendute, oltre che dal tipo di tappo e dal tipo di bottiglia 
 		Altri dati importanti sono il prezzo per bottiglia, il numero di bottiglie prodotte e vendute, il tipo di tappo e bottiglia ed infine dalla classificazione: vini a denominazione d'origine controllata e garantita (D.O.C.G.); vini a denominazione d'origine controllata (D.O.C.); vini ad indicazione geografica tipica (I.G.T.). Ciascuna tipologia di bottiglia di vino è racchiusa in magazzini. Ovviamente le bottiglie di vino possono essere spedite in una determinata quantità in un ordine di vendita\\
 		\bottomrule
 	\end{tabular}
@@ -14,7 +14,7 @@
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A TIPO DI VINO}} \\
 		\midrule
-		Relativamente ai tipi di vino rappresentiamo il nome, la gradazione alcolica, il tempo di fermentazione e l'uva utilizzata oltre che lo stato produttivo, ovvero se il vino viene prodotto ancora o e' ormai fuori commercio. \\
+		Relativamente ai tipi di vino rappresentiamo il nome, la gradazione alcolica, il tempo di fermentazione e l'uva utilizzata oltre che lo stato produttivo, ovvero se il vino viene prodotto ancora o è ormai fuori commercio. \\
 		\bottomrule
 	\end{tabular}
 
@@ -24,7 +24,7 @@
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A MATERIA PRIMA}} \\
 		\midrule
-		Le materie prima che vengono acquistate viene rappresentato un ID univoco che le rappresenta. Se la materia prima e' l'Uva questa viene rappresentata dall'anno di raccolta, dal nome e dal colore, se, invece, la materia prima sono i Tappi questa viene rappresentata dalla forma e dal materiale, infine se la materia prima sono le Bottiglie, questa viene rappresentata dalla capacita' e dal colore.\\
+		Le materie prima che vengono acquistate viene rappresentato un ID univoco che le rappresenta. Se la materia prima è l'Uva questa viene rappresentata dall'anno di raccolta, dal nome e dal colore, se, invece, la materia prima sono i Tappi questa viene rappresentata dalla forma e dal materiale, infine se la materia prima sono le Bottiglie, questa viene rappresentata dalla capacità e dal colore.\\
 		\bottomrule
 	\end{tabular}
 
@@ -45,7 +45,7 @@
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE AD AZIENDA}} \\
 		\midrule
 
-		Una Azienda e' rappresentata dal nome, dalla Partita IVA, dal nome e dal cognome del referente oltre che dal numero di telefono, dalla email aziendale e dalla sua posizione geografica. Per le aziende che sono Fornitori rappresentiamo poi la tipologia di Materia Prima fornita, sia essa Uva, Tappi o Bottiglie.\\
+		Una Azienda è rappresentata dal nome, dalla Partita IVA, dal nome e dal cognome del referente oltre che dal numero di telefono, dalla email aziendale e dalla sua posizione geografica. Per le aziende che sono Fornitori rappresentiamo poi la tipologia di Materia Prima fornita, sia essa Uva, Tappi o Bottiglie.\\
 		\bottomrule
 	\end{tabular}
 	
@@ -55,7 +55,7 @@
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE AD ORDINE}} \\
 		\midrule
-		Relativamente ad un ordine rappresentiamo un ID univoco, la data in cui e' stato effettuato, il corriere a cui e' stata affidato, la data di spedizione, la data di consegna e il prezzo totale (che deve corrispondere al prodotto tra il prezzo delle bottiglie di vino acquistate e il relativo prezzo sommato al costo della spedizione).\\
+		Relativamente ad un ordine rappresentiamo un ID univoco, la data in cui è stato effettuato, il corriere a cui è stata affidato, la data di spedizione, la data di consegna e il prezzo totale (che deve corrispondere al prodotto tra il prezzo delle bottiglie di vino acquistate e il relativo prezzo sommato al costo della spedizione).\\
 		\bottomrule
 	\end{tabular}
 	
