--- a/src/progettazioneConcettuale/analisi_relazioni.tex
+++ b/src/progettazioneConcettuale/analisi_relazioni.tex
@@ -85,7 +85,7 @@
 	
 	\begin{itemize}
 		\item Una tipologia di bottiglia di vino è conservata in un unico magazzino $(0,1)$
-		\item Un magazzino contiene da una a molteplici tipologie di vino, poiche' la loro divisione avviene per colore e non per annata $(1,N)$.
+		\item Un magazzino contiene da una a molteplici tipologie di vino, poichè la loro divisione avviene per colore e non per annata $(1,N)$.
 	\end{itemize}
 	
 \end{itemize}
@@ -101,7 +101,7 @@
 \end{itemize}
 
 \begin{verse}
-	*\emph{Nella relazione è presente l'attributo \textbf{QuantitàBottiglie} poiche' serve sapere il numero di bottiglie di vino per tipologia richieste dall'ordine.}
+	*\emph{Nella relazione è presente l'attributo \textbf{QuantitàBottiglie} poichè serve sapere il numero di bottiglie di vino per tipologia richieste dall'ordine.}
 \end{verse}
 
 \begin{itemize}
@@ -109,7 +109,7 @@
 	
 	\begin{itemize}
 		\item Un ordine viene spedito da un singolo corriere $(0,1)$.
-		\item Un corriere può spedire uno o piu' ordini $(1,N)$.
+		\item Un corriere può spedire uno o più ordini $(1,N)$.
 	\end{itemize}
 	
 \end{itemize}
@@ -122,7 +122,7 @@
 	\item \underline{Ordine - Acquirente}: \textbf{Venduta}
 	
 	\begin{itemize}
-		\item Un ordine e' effettuato da un singolo acquirente $(0,1)$.
+		\item Un ordine è effettuato da un singolo acquirente $(0,1)$.
 		\item Un acquirente può effettuare uno o più ordini $(1,N)$.
 	\end{itemize}
 	
@@ -208,6 +208,6 @@
 \end{itemize}
 
 \begin{verse}
-	*\emph{Nella relazione sono presenti gli attributi \textbf{Costo} e \textbf{Data} che identificano il costo della singola manutenzione e in quale data e' stata effettuata.}
+	*\emph{Nella relazione sono presenti gli attributi \textbf{Costo} e \textbf{Data} che identificano il costo della singola manutenzione e in quale data è stata effettuata.}
 \end{verse}
 
