--- a/src/progettazioneLogica/eliminazioni_generalizzazioni.tex
+++ b/src/progettazioneLogica/eliminazioni_generalizzazioni.tex
@@ -8,19 +8,19 @@ Lo schema concenttuale presenta molte generalizzazioni. Si procede all'analisi d
 
 \begin{flushleft}
 	\textbf{\large{Fornitore}}\\
-	L'entità \emph{Fornitore} non ha attributi ed è generalizzata dall'entità \emph{Azienda}. A sua volta \emph{Fornitore} è una generalizzazione di \emph{FornitoreUva, FornitoreTappi, FornitoreBottiglie}. Si è deciso di mantenere l'entità \emph{Fornitore} (avendo relazioni specifiche) e di eliminare \emph{FornitoreUva, FornitoreTappi, FornitoreBottiglie}. E' quindi stato aggiunto l'attributo \textbf{Tipologia} per identificare il tipo di fornitura di ogni fornitore.
+	L'entità \emph{Fornitore} non ha attributi ed è generalizzata dall'entità \emph{Azienda}. A sua volta \emph{Fornitore} è una generalizzazione di \emph{FornitoreUva, FornitoreTappi, FornitoreBottiglie}. Si è deciso di mantenere l'entità \emph{Fornitore} (avendo relazioni specifiche) e di eliminare \emph{FornitoreUva, FornitoreTappi, FornitoreBottiglie}. è quindi stato aggiunto l'attributo \textbf{Tipologia} per identificare il tipo di fornitura di ogni fornitore.
 \end{flushleft}
 
 
 \begin{flushleft}
 	\textbf{\large{Acquirente}}\\
-	L'entità \emph{Acquirente} presenta un attributo ed una relazione. A loro volta anche le entità figlie \emph{Azienda e Privato} hanno attributi significativi. Per ristrutturare questa generalizzazione si è deciso di creare due relazioni differenti. La prima si chiama \textbf{IsAzienda} dove la cardinalità da \emph{Azienda} ad \emph{Acquirente} è $(0,1)$ poiche' un'azienda puo' non essere un acquirente, mentre da \emph{Acquirente} ad \emph{Azienda} è $(0,1)$ poiche' non tutti gli acquirenti sono un'azienda.
-	La seconda relazione si chiama \textbf{IsPrivato} ed e' stata creata utilizzando lo stesso ragionamento di IsAzienda, ovvero la cardinalita' da \emph{Acquirente} a \emph{Privato} e' $(0,1)$ poiche' non tutti gli acquirenti sono privati, mentre da \emph{Privato} ad \emph{Acquirente} è $(1,1)$ poiche' un privato e' sempre un acquirente. Le entità \emph{Azienda} e \emph{Privato} mantengono gli attributi visti in precedenza, in piu' ad \emph{Acquirente} verra' aggiunto l'attributo \emph{NumAcquirente} che sara' chiave referenziale ad \emph{Acquirente}. Si e' deciso di aggiungere questo attributo consapevoli dell'eventualita' che quest'ultimo possa essere \textbf{NULL} visto che il numero di aziende che non sono acquirenti (es. fornitori) e' minore di quelle che lo sono.
+	L'entità \emph{Acquirente} presenta un attributo ed una relazione. A loro volta anche le entità figlie \emph{Azienda e Privato} hanno attributi significativi. Per ristrutturare questa generalizzazione si è deciso di creare due relazioni differenti. La prima si chiama \textbf{IsAzienda} dove la cardinalità da \emph{Azienda} ad \emph{Acquirente} è $(0,1)$ poichè un'azienda può non essere un acquirente, mentre da \emph{Acquirente} ad \emph{Azienda} è $(0,1)$ poichè non tutti gli acquirenti sono un'azienda.
+	La seconda relazione si chiama \textbf{IsPrivato} ed è stata creata utilizzando lo stesso ragionamento di IsAzienda, ovvero la cardinalità da \emph{Acquirente} a \emph{Privato} è $(0,1)$ poichè non tutti gli acquirenti sono privati, mentre da \emph{Privato} ad \emph{Acquirente} è $(1,1)$ poichè un privato è sempre un acquirente. Le entità \emph{Azienda} e \emph{Privato} mantengono gli attributi visti in precedenza, in più ad \emph{Acquirente} verrà aggiunto l'attributo \emph{NumAcquirente} che sarà chiave referenziale ad \emph{Acquirente}. Si è deciso di aggiungere questo attributo consapevoli dell'eventualità che quest'ultimo possa essere \textbf{NULL} visto che il numero di aziende che non sono acquirenti (es. fornitori) è minore di quelle che lo sono.
 \end{flushleft}
 
 \begin{flushleft}
 	\textbf{\large{Azienda}}\\
-	L'entità \emph{Azienda} puo' identificare un fornitore, un'azienda di manutenzione o un negozio interno. Per ristrutturare questa generalizzazione si è deciso di aggiungere una relazione chiamata \emph{IsNegozioInterno} con cardinalità $(0,1)$ da \emph{Azienda} a \emph{NegozioInterno} poiche' non tutte le aziende sono un \emph{NegozioInterno}. La cardinalità da \emph{NegozioInterno} ad \emph{Azienda} è $(1,1)$ poiche' un negozio interno è anch'esso un'azienda. E' stata scelta questa soluzione perchè il numero di aziende che non sono negozi interni è maggiore rispetto al numero dei negozi interni, perciò è stata esclusa l'aggiunta di un attributo in \emph{Azienda} che identifichi se quest'ultima e' anche negozio interno. La stessa soluzione e' stata adottata anche per la generalizzazione con \emph{Fornitore}. Nella generalizzazione di \emph{AzManutenzione}, invece, si è deciso di togliere \emph{AzManutenzione} e di non specificare se un'azienda è un' azienda che effettua la manutenzione dei macchinari, ma di ricavarlo tramite la relazione \emph{Manutenzione}.
+	L'entità \emph{Azienda} può identificare un fornitore, un'azienda di manutenzione o un negozio interno. Per ristrutturare questa generalizzazione si è deciso di aggiungere una relazione chiamata \emph{IsNegozioInterno} con cardinalità $(0,1)$ da \emph{Azienda} a \emph{NegozioInterno} poichè non tutte le aziende sono un \emph{NegozioInterno}. La cardinalità da \emph{NegozioInterno} ad \emph{Azienda} è $(1,1)$ poichè un negozio interno è anch'esso un'azienda. è stata scelta questa soluzione perchè il numero di aziende che non sono negozi interni è maggiore rispetto al numero dei negozi interni, perciò è stata esclusa l'aggiunta di un attributo in \emph{Azienda} che identifichi se quest'ultima è anche negozio interno. La stessa soluzione è stata adottata anche per la generalizzazione con \emph{Fornitore}. Nella generalizzazione di \emph{AzManutenzione}, invece, si è deciso di togliere \emph{AzManutenzione} e di non specificare se un'azienda è un' azienda che effettua la manutenzione dei macchinari, ma di ricavarlo tramite la relazione \emph{Manutenzione}.
 \end{flushleft}
 
 \begin{flushleft}
