--- a/src/progettazioneLogica/schema_relazionale.tex
+++ b/src/progettazioneLogica/schema_relazionale.tex
@@ -1,119 +1,162 @@
-\textbf{BottiglieDiVino} (\underline{Id}, Vino, Annata, Prezzo, Classificazione, NumBottiglieVendute, NumBottiglieMagazzino, NumBottiglieProdotte, IdTappo, IdBottiglia, IdMagazzino)
-\begin{verse}
-	(BottiglieDiVino.Vino, BottiglieDiVino.Annata) $\to$ (Vini.Nome, Vini.Uva.Annata)*\\
-	BottiglieDiVino.IdTappo $\to$ Tappi.Id\\
-	BottiglieDiVino.IdBottiglia $\to$ Bottiglie.Id\\
-	BottiglieDiVino.IdMagazzino $\to$ LineeProduttive.Id
-\end{verse} 
-\textbf{Vini} (\underline{Nome}, GradazioneAlcolica, TempoFermentazione, StatoProduzione, Uva)
-\begin{verse}
-	Vini.Uva $\to$ Uva.Id
-\end{verse} 
-\textbf{Uva} (\underline{Id}, TipoUva, Fornitore, Annata)
-\begin{verse}
-	Uva.Fornitore $\to$ Fornitori.Id\\
-	Uva.TipoUva $\to$ TipiUva.Nome
-\end{verse}
-\textbf{TipiUva} (\underline{Nome}, Colore)\\
-\textbf{Vigneti} (\underline{Id}, Indirizzo, TipoUva)
-\begin{verse}
-	Vigneti.Indirizzo $\to$ Indirizzi.Id\\
-	Vigneti.TipoUva $\to$ TipiUva.Nome\\
-\end{verse} 
-\textbf{Tappi} (\underline{Id}, Forma, Materiale, Quantita, Fornitore)
-\begin{verse}
-	Tappi.Fornitore $\to$ Fornitori.Id
-\end{verse}
-\textbf{Bottiglie} (\underline{Id}, Capacita, Colore, Quantita, Fornitore)
-\begin{verse}
-	Bottiglie.Fornitore $\to$ Fornitori.Id
-\end{verse}
-\textbf{FornisceUva} (\underline{Uva, DataAcquisto}, Prezzo, Quantita)
-\begin{verse}
-	FornisceUva.Uva $\to$ Uva.Id
-\end{verse}
-\textbf{FornisceTappo} (\underline{Tappo, DataAcquisto}, Prezzo, Quantita)
-\begin{verse}
-	FornisceTappi.Tappo $\to$ Tappi.Id
-\end{verse} 
-\textbf{FornisceBottiglia} (\underline{Bottiglia, DataAcquisto}, Prezzo, Quantita)
-\begin{verse}
-	FornisceBottiglia.Bottiglia $\to$ Bottiglie.Id
-\end{verse} 
-\textbf{LineeProduttive} (\underline{Id}, Nome, Direttore)
-\begin{verse}
-	LineeProduttive.Direttore $\to$ Dipendenti.CodiceFiscale
-\end{verse} 
-\textbf{Macchinari} (\underline{Id}, Nome, DataProssimaManutenzione, DataAcquisto, LineaProduttiva)
-\begin{verse}
-	Macchinari.LineaProduttiva $\to$ LineeProduttive.Id
-\end{verse} 
-\textbf{Manutenzioni} (\underline{Id}, Macchinario, Azienda, Costo, Data)
-\begin{verse}
-	Manutenzioni.Macchinario $\to$ Macchinari.Id\\
-	Manutenzioni.Azienda $\to$ Aziende.Id
-\end{verse}
-\textbf{Dipendenti} (\underline{CodiceFiscale}, Nome, Cognome, Referente)
-\begin{verse}
-	Dipendenti.Referente $\to$ Dipendenti.CodiceFiscale
-\end{verse} 
-\textbf{Turni} (\underline{Dipendente, InizioTurno}, FineTurno, LineaProduttiva)
-\begin{verse}
-	Turni.Dipendente $\to$ Dipendenti.CodiceFiscale\\
-	Turni.LineaProduttiva $\to$ LineeProduttive.Id
-\end{verse} 
-\textbf{Ordini} (\underline{Id}, PrezzoTotale *, Data, Acquirente)
-\begin{verse}
-	Ordini.Acquirente $\to$ Acquirenti.Id
-\end{verse} 
-\textbf{Dettagli} (\underline{Ordine, Vino}, QuantitaBottiglie)
-\begin{verse}
-	Dettagli.Ordine $\to$ Ordini.Id\\
-	Dettagli.Vino $\to$ BottiglieDiVino.Id
-\end{verse} 
-\textbf{Spedizioni} (\underline{Ordine, Corriere}, DataSpedizione, DataConsegna, Prezzo)
-\begin{verse}
-	Spedizioni.Ordine $\to$ Ordini.Id\\
-	Spedizioni.Corriere $\to$ Corrieri.Id
-\end{verse} 
-\textbf{Corrieri} (\underline{Id}, Nome)\\
-\textbf{Acquirenti} (\underline{Id})\\
-\textbf{Privati} (\underline{Id}, Cognome, InformazioniAggiuntive)
-\begin{verse}
-	Privati.Id $\to$ Acquirenti.Id\\
-	Privati.InformazioniAggiuntive $\to$ Informazioni.Id
-\end{verse} 
-\textbf{Aziende} (\underline{Id}, NumAcquirente, PartitaIva, NomeReferente, CognomeReferente, InformazioniAggiuntive)
-\begin{verse}
-	Aziende.NumAcquirente $\to$ Acquirenti.Id\\
-	Aziende.InformazioniAggiuntive $\to$ Informazioni.Id
-\end{verse}
-\textbf{Fornitori} (\underline{Id}, Tipologia)
-\begin{verse}
-	Fornitori.Id $\to$ Aziende.Id
-\end{verse} 
-\textbf{NegoziInterni} (\underline{Id})
-\begin{verse}
-	NegoziInterni.Id $\to$ Aziende.Id
-\end{verse} 
-\textbf{Indirizzi} (\underline{Id}, Via, NumeroCivico, Stato, Provincia, Citta, CAP)\\
-\textbf{Eventi} (\underline{Id}, Titolo, Edizione)\\
-\textbf{Ospita} (\underline{Evento, Negozio}, Data)
-\begin{verse}
-	Ospita.Evento $\to$ Eventi.Id\\
-	Ospita.Negozio $\to$ NegoziInterni.Id
-\end{verse}  
-\textbf{TemiVino} (\underline{Vino, Evento})
-\begin{verse}
-	TemiVino.Vino $\to$ Vini.Nome\\
-	TemiVino.Evento $\to$ Eventi.Id
-\end{verse}
-\textbf{Informazioni} (\underline{Id}, Nome, Telefono, Email, Indirizzo)
-\begin{verse}
-	Informazioni.Indirizzo $\to$ Indirizzi.Id
-\end{verse}
-
-
+\begin{minipage}{9cm}
+	\leftline{
+		\begin{tabular}{P{9cm}}
+			\begin{flushleft}
+				
+				\textbf{Uva} (\underline{Id}, TipoUva, Fornitore, Annata)
+				\begin{verse}
+					Uva.Fornitore $\to$ Fornitori.Id\\
+					Uva.TipoUva $\to$ TipiUva.Nome
+				\end{verse}
+				\textbf{TipiUva} (\underline{Nome}, Colore)\\
+				\textbf{Vigneti} (\underline{Id}, Indirizzo, TipoUva)
+				\begin{verse}
+					Vigneti.Indirizzo $\to$ Indirizzi.Id\\
+					Vigneti.TipoUva $\to$ TipiUva.Nome\\
+				\end{verse} 
+			\textbf{Tappi} (\underline{Id}, Forma, Materiale, Quantita, Fornitore)
+			\begin{verse}
+				Tappi.Fornitore $\to$ Fornitori.Id
+			\end{verse}
+			\textbf{Bottiglie} (\underline{Id}, Capacita, Colore, Quantita, Fornitore)
+			\begin{verse}
+				Bottiglie.Fornitore $\to$ Fornitori.Id
+			\end{verse}
+			\textbf{Eventi} (\underline{Id}, Titolo, Edizione)\\
+			\textbf{Corrieri} (\underline{Id}, Nome)\\
+			\textbf{Acquirenti} (\underline{Id})\\
+			
+			\end{flushleft}
+			
+			
+			
+			
+		\end{tabular}
+	}
+\end{minipage}
+\begin{minipage}{9cm}
+	\rightline{
+	\begin{tabular}{P{9cm}}
+		\begin{flushleft}
+			\textbf{FornisceUva} (\underline{Uva, DataAcquisto}, Prezzo, Quantita)
+			\begin{verse}
+				FornisceUva.Uva $\to$ Uva.Id
+			\end{verse}
+			\textbf{FornisceTappo} (\underline{Tappo, DataAcquisto}, Prezzo, Quantita)
+			\begin{verse}
+				FornisceTappi.Tappo $\to$ Tappi.Id
+			\end{verse} 
+			\textbf{FornisceBottiglia} (\underline{Bottiglia, DataAcquisto}, Prezzo, Quantita)
+			\begin{verse}
+				FornisceBottiglia.Bottiglia $\to$ Bottiglie.Id
+			\end{verse} 
+			\textbf{LineeProduttive} (\underline{Id}, Nome, Direttore)
+			\begin{verse}
+				LineeProduttive.Direttore $\to$ Dipendenti.CodiceFiscale
+			\end{verse} 
+			\textbf{Macchinari} (\underline{Id}, Nome, DataProssimaManutenzione, DataAcquisto, LineaProduttiva)
+			\begin{verse}
+				Macchinari.LineaProduttiva $\to$ LineeProduttive.Id
+			\end{verse}
+			
+			
+		\end{flushleft}
+		
+		
+		
+		
+	\end{tabular}
+}
+\end{minipage}
+\begin{minipage}{8cm}
+	\leftline{
+		\begin{tabular}{P{8cm}}
+			\begin{flushleft}
+				\textbf{Dipendenti} (\underline{CodiceFiscale}, Nome, Cognome, Referente)
+				\begin{verse}
+					Dipendenti.Referente $\to$ Dipendenti.CodiceFiscale
+				\end{verse}
+			\textbf{Turni} (\underline{Dipendente, InizioTurno}, FineTurno, LineaProduttiva)
+			\begin{verse}
+				Turni.Dipendente $\to$ Dipendenti.CodiceFiscale\\
+				Turni.LineaProduttiva $\to$ LineeProduttive.Id
+			\end{verse} 
+			\textbf{Ordini} (\underline{Id}, PrezzoTotale *, Data, Acquirente)
+			\begin{verse}
+				Ordini.Acquirente $\to$ Acquirenti.Id
+			\end{verse} 
+			\textbf{Dettagli} (\underline{Ordine, Vino}, QuantitaBottiglie)
+			\begin{verse}
+				Dettagli.Ordine $\to$ Ordini.Id\\
+				Dettagli.Vino $\to$ BottiglieDiVino.Id
+			\end{verse} 
+			\textbf{Spedizioni} (\underline{Ordine, Corriere}, DataSpedizione, DataConsegna, Prezzo)
+			\begin{verse}
+				Spedizioni.Ordine $\to$ Ordini.Id\\
+				Spedizioni.Corriere $\to$ Corrieri.Id
+			\end{verse} 
+			
+			\textbf{Privati} (\underline{Id}, Cognome, InformazioniAggiuntive)
+			\begin{verse}
+				Privati.Id $\to$ Acquirenti.Id\\
+				Privati.InformazioniAggiuntive $\to$ Informazioni.Id
+			\end{verse}
+			\textbf{Ospita} (\underline{Evento, Negozio}, Data)
+			\begin{verse}
+				Ospita.Evento $\to$ Eventi.Id\\
+				Ospita.Negozio $\to$ NegoziInterni.Id
+			\end{verse}  
+			\textbf{Fornitori} (\underline{Id}, Tipologia)
+			\begin{verse}
+				Fornitori.Id $\to$ Aziende.Id
+			\end{verse} 
+			\end{flushleft}
+		\end{tabular}
+	}
+\end{minipage}
+\begin{minipage}{9cm}
+	\rightline{
+		\begin{tabular}{P{9cm}}
+			\begin{flushleft}
+				\textbf{NegoziInterni} (\underline{Id})
+				\begin{verse}
+					NegoziInterni.Id $\to$ Aziende.Id
+				\end{verse}
+				\textbf{Aziende} (\underline{Id}, NumAcquirente, PartitaIva, NomeReferente, CognomeReferente, InformazioniAggiuntive)
+				\begin{verse}
+					Aziende.NumAcquirente $\to$ Acquirenti.Id\\
+					Aziende.InformazioniAggiuntive $\to$ Informazioni.Id
+				\end{verse}
+				\textbf{Indirizzi} (\underline{Id}, Via, NumeroCivico, Stato, Provincia, Citta, CAP)\\
+				\textbf{TemiVino} (\underline{Vino, Evento})
+				\begin{verse}
+					TemiVino.Vino $\to$ Vini.Nome\\
+					TemiVino.Evento $\to$ Eventi.Id
+				\end{verse}
+				\textbf{Informazioni} (\underline{Id}, Nome, Telefono, Email, Indirizzo)
+				\begin{verse}
+					Informazioni.Indirizzo $\to$ Indirizzi.Id
+				\end{verse}
+				\textbf{BottiglieDiVino} (\underline{Id}, Vino, Annata, Prezzo, Classificazione, NumBottiglieVendute, NumBottiglieMagazzino, NumBottiglieProdotte, IdTappo, IdBottiglia, IdMagazzino)
+				\begin{verse}
+					(BottiglieDiVino.Vino, BottiglieDiVino.Annata) $\to$ (Vini.Nome, Vini.Uva.Annata)*\\
+					BottiglieDiVino.IdTappo $\to$ Tappi.Id\\
+					BottiglieDiVino.IdBottiglia $\to$ Bottiglie.Id\\
+					BottiglieDiVino.IdMagazzino $\to$ LineeProduttive.Id
+				\end{verse} 
+				\textbf{Vini} (\underline{Nome}, GradazioneAlcolica, TempoFermentazione, StatoProduzione, Uva)
+				\begin{verse}
+					Vini.Uva $\to$ Uva.Id
+				\end{verse} 
+				\textbf{Manutenzioni} (\underline{Id}, Macchinario, Azienda, Costo, Data)
+				\begin{verse}
+					Manutenzioni.Macchinario $\to$ Macchinari.Id\\
+					Manutenzioni.Azienda $\to$ Aziende.Id
+				\end{verse}
+			\end{flushleft}
+		\end{tabular}
+	}
+\end{minipage}
 \begin{verse}
 	*\emph{Per ovviare al problema del vincolo referenziale fra \textbf{BottiglieDiVino.Annata e Vini.Uva.Annata} e \textbf{Ordini.PrezzoTotale} come somma di \begin{math}(BottiglieDiVino.Prezzo \times Dettagli.QuantitaBottiglie)+ Spedizioni.Prezzo\end{math}} si potrebbe aggiungere un \textbf{TRIGGER}, cosa comunque non richiesta ai fini del progetto.
 \end{verse}
