--- a/main.tex
+++ b/main.tex
@@ -13,6 +13,7 @@
 
 
 \newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
+\newcolumntype{S}[1]{>{\arraybackslash}p{#1}}
 %\titleformat{\chapter}[display]{\bfseries}{}{-30pt}{\Huge}
 
 \renewcommand{\familydefault}{\sfdefault}
