--- a/src/progettazioneLogica/schema_relazionale.tex
+++ b/src/progettazioneLogica/schema_relazionale.tex
@@ -1,314 +1,193 @@
-% \begin{center}
-% 	\begin{minipage}{7.5cm}
-% 		\rightline{
-% 			\begin{tabular}{P{7.5cm}}
-% 				\toprule
-% 				\rowcolor[rgb]{.929, .929, .929} \textbf{BottiglieDiVino} (\underline{Id}, Vino, Annata, Prezzo, Classificazione, NumBottiglieVendute, NumBottiglieMagazzino, NumBottiglieProdotte, IdTappo, IdBottiglia, IdMagazzino) \\
-% 				\midrule
-% 				(BottiglieDiVino.Vino, BottiglieDiVino.Annata) $\to$ (Vini.Nome, Vini.Uva.Annata)*                                                                                                                                     \\
-% 				\midrule
-% 				BottiglieDiVino.IdTappo $\to$ Tappi.Id                                                                                                                                                                                 \\
-% 				\midrule
-% 				BottiglieDiVino.IdBottiglia $\to$ Bottiglie.Id                                                                                                                                                                         \\
-% 				\midrule
-% 				BottiglieDiVino.IdMagazzino $\to$ LineeProduttive.Id                                                                                                                                                                   \\                                  \\
-% 				\bottomrule
+\begin{center}
+	\begin{minipage}[t]{7.5cm}
+		\rightline{
+			\begin{tabular}{P{7.5cm}}
+				\toprule
+				\rowcolor[rgb]{.929, .929, .929} \textbf{BottiglieDiVino} (\underline{Id}, Vino, Annata, Prezzo, Classificazione, NumBottiglieVendute, NumBottiglieMagazzino, NumBottiglieProdotte, IdTappo, IdBottiglia, IdMagazzino) \\
+				\midrule
+				(BottiglieDiVino.Vino, BottiglieDiVino.Annata) $\to$ (Vini.Nome, Vini.Uva.Annata)*                                                                                                                                     \\
+				\midrule
+				BottiglieDiVino.IdTappo $\to$ Tappi.Id                                                                                                                                                                                 \\
+				\midrule
+				BottiglieDiVino.IdBottiglia $\to$ Bottiglie.Id                                                                                                                                                                         \\
+				\midrule
+				BottiglieDiVino.IdMagazzino $\to$ LineeProduttive.Id                                                                                                                                                                   \\                                  \\
+				\midrule
 
-% 				\rowcolor[rgb]{.929, .929, .929} \textbf{Vini} (\underline{Nome}, GradazioneAlcolica, TempoFermentazione, StatoProduzione, Uva)                                                                                        \\
-% 				\midrule
-% 				Vini.Uva $\to$ Uva.Id                                                                                                                                                                                                  \\
-% 				\bottomrule
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Vini} (\underline{Nome}, GradazioneAlcolica, TempoFermentazione, StatoProduzione, Uva)                                                                                        \\
+				\midrule
+				Vini.Uva $\to$ Uva.Id                                                                                                                                                                                                  \\
+				\midrule
 
-% 				\rowcolor[rgb]{.929, .929, .929} \textbf{Uva} (\underline{Id}, TipoUva, Fornitore, Annata)                                                                                                                             \\
-% 				\midrule
-% 				Uva.Fornitore $\to$ Fornitori.Id                                                                                                                                                                                       \\
-% 				\midrule
-% 				Uva.TipoUva $\to$ TipiUva.Nome                                                                                                                                                                                         \\
-% 				\bottomrule
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Uva} (\underline{Id}, TipoUva, Fornitore, Annata)                                                                                                                             \\
+				\midrule
+				Uva.Fornitore $\to$ Fornitori.Id                                                                                                                                                                                       \\
+				\midrule
+				Uva.TipoUva $\to$ TipiUva.Nome                                                                                                                                                                                         \\
+				\midrule
+			\end{tabular}
+		}
+	\end{minipage}
+	\hspace{5mm}
+	\begin{minipage}[t]{7.5cm}
+		\rightline{
+			\begin{tabular}{P{7.5cm}}
+				\toprule
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Vigneti} (\underline{Id}, Indirizzo, TipoUva)                      \\
+				\midrule
+				Vigneti.Indirizzo $\to$ Indirizzi.Id                                                                        \\
+				\midrule
+				Vigneti.TipoUva $\to$ TipiUva.Nome                                                                          \\                                \\
+				\midrule
 
-% 				\rowcolor[rgb]{.929, .929, .929} \textbf{Vigneti} (\underline{Id}, Indirizzo, TipoUva)                                                                                                                                 \\
-% 				\midrule
-% 				Vigneti.Indirizzo $\to$ Indirizzi.Id                                                                                                                                                                                   \\
-% 				\midrule
-% 				Vigneti.TipoUva $\to$ TipiUva.Nome                                                                                                                                                                                     \\                                \\
-% 				\bottomrule
-% 			\end{tabular}
-% 		}
-% 	\end{minipage}
-% 	\hspace{5mm}
-% 	\begin{minipage}{7.5cm}
-% 		\rightline{
-% 			\begin{tabular}{P{7.5cm}}
-% 				\toprule
-% 				\rowcolor[rgb]{.929, .929, .929} Titolo \\
-% 				\midrule
-% 				sdfsdfdf                                \\
-% 				\bottomrule
-% 			\end{tabular}
-% 		}
-% 	\end{minipage}
-% \end{center}
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Tappi} (\underline{Id}, Forma, Materiale, Quantita, Fornitore)     \\
+				\midrule
+				Tappi.Fornitore $\to$ Fornitori.Id                                                                          \\                                \\
+				\midrule
 
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Bottiglie} (\underline{Id}, Capacita, Colore, Quantita, Fornitore) \\
+				\midrule
+				Bottiglie.Fornitore $\to$ Fornitori.Id                                                                      \\                                \\
+				\midrule
 
-% \textbf{BottiglieDiVino} (\underline{Id}, Vino, Annata, Prezzo, Classificazione, NumBottiglieVendute, NumBottiglieMagazzino, NumBottiglieProdotte, IdTappo, IdBottiglia, IdMagazzino)
-% \begin{verse}
-% 	(BottiglieDiVino.Vino, BottiglieDiVino.Annata) $\to$ (Vini.Nome, Vini.Uva.Annata)*\\
-% 	BottiglieDiVino.IdTappo $\to$ Tappi.Id\\
-% 	BottiglieDiVino.IdBottiglia $\to$ Bottiglie.Id\\
-% 	BottiglieDiVino.IdMagazzino $\to$ LineeProduttive.Id
-% \end{verse}
-
-% \textbf{Vini} (\underline{Nome}, GradazioneAlcolica, TempoFermentazione, StatoProduzione, Uva)
-% \begin{verse}
-% 	Vini.Uva $\to$ Uva.Id
-% \end{verse}
-
-% \textbf{Uva} (\underline{Id}, TipoUva, Fornitore, Annata)
-% \begin{verse}
-% 	Uva.Fornitore $\to$ Fornitori.Id\\
-% 	Uva.TipoUva $\to$ TipiUva.Nome
-% \end{verse}
-% \textbf{TipiUva} (\underline{Nome}, Colore)\\
-% \textbf{Vigneti} (\underline{Id}, Indirizzo, TipoUva)
-% \begin{verse}
-% 	Vigneti.Indirizzo $\to$ Indirizzi.Id\\
-% 	Vigneti.TipoUva $\to$ TipiUva.Nome\\
-% \end{verse}
-% \textbf{Tappi} (\underline{Id}, Forma, Materiale, Quantita, Fornitore)
-% \begin{verse}
-% 	Tappi.Fornitore $\to$ Fornitori.Id
-% \end{verse}
-% \textbf{Bottiglie} (\underline{Id}, Capacita, Colore, Quantita, Fornitore)
-% \begin{verse}
-% 	Bottiglie.Fornitore $\to$ Fornitori.Id
-% \end{verse}
-% \textbf{FornituraUva} (\underline{Uva, DataAcquisto}, Prezzo, Quantita)
-% \begin{verse}
-% 	FornituraUva.Uva $\to$ Uva.Id
-% \end{verse}
-% \textbf{FornituraTappo} (\underline{Tappo, DataAcquisto}, Prezzo, Quantita)
-% \begin{verse}
-% 	FornituraTappo.Tappo $\to$ Tappi.Id
-% \end{verse}
-% \textbf{FornituraBottiglia} (\underline{Bottiglia, DataAcquisto}, Prezzo, Quantita)
-% \begin{verse}
-% 	FornituraBottiglia.Bottiglia $\to$ Bottiglie.Id
-% \end{verse}
-% \textbf{LineeProduttive} (\underline{Id}, Nome, Direttore)
-% \begin{verse}
-% 	LineeProduttive.Direttore $\to$ Dipendenti.CodiceFiscale
-% \end{verse}
-% \textbf{Macchinari} (\underline{Id}, Nome, DataProssimaManutenzione, DataAcquisto, LineaProduttiva)
-% \begin{verse}
-% 	Macchinari.LineaProduttiva $\to$ LineeProduttive.Id
-% \end{verse}
-% \textbf{Manutenzioni} (\underline{Id}, Macchinario, Azienda, Costo, Data)
-% \begin{verse}
-% 	Manutenzioni.Macchinario $\to$ Macchinari.Id\\
-% 	Manutenzioni.Azienda $\to$ Aziende.Id
-% \end{verse}
-% \textbf{Dipendenti} (\underline{CodiceFiscale}, Nome, Cognome, Referente)
-% \begin{verse}
-% 	Dipendenti.Referente $\to$ Dipendenti.CodiceFiscale
-% \end{verse}
-% \textbf{Turni} (\underline{Dipendente, InizioTurno}, FineTurno, LineaProduttiva)
-% \begin{verse}
-% 	Turni.Dipendente $\to$ Dipendenti.CodiceFiscale\\
-% 	Turni.LineaProduttiva $\to$ LineeProduttive.Id
-% \end{verse}
-% \textbf{Ordini} (\underline{Id}, PrezzoTotale *, Data, Acquirente)
-% \begin{verse}
-% 	Ordini.Acquirente $\to$ Acquirenti.Id
-% \end{verse}
-% \textbf{Dettagli} (\underline{Ordine, Vino}, QuantitaBottiglie)
-% \begin{verse}
-% 	Dettagli.Ordine $\to$ Ordini.Id\\
-% 	Dettagli.Vino $\to$ BottiglieDiVino.Id
-% \end{verse}
-% \textbf{Spedizioni} (\underline{Ordine, Corriere}, DataSpedizione, DataConsegna, Prezzo)
-% \begin{verse}
-% 	Spedizioni.Ordine $\to$ Ordini.Id\\
-% 	Spedizioni.Corriere $\to$ Corrieri.Id
-% \end{verse}
-% \textbf{Corrieri} (\underline{Id}, Nome)\\
-% \textbf{Acquirenti} (\underline{Id})\\
-% \textbf{Privati} (\underline{Id}, Cognome, InformazioniAggiuntive)
-% \begin{verse}
-% 	Privati.Id $\to$ Acquirenti.Id\\
-% 	Privati.InformazioniAggiuntive $\to$ Informazioni.Id
-% \end{verse}
-% \textbf{Aziende} (\underline{Id}, NumAcquirente, PartitaIva, NomeReferente, CognomeReferente, InformazioniAggiuntive)
-% \begin{verse}
-% 	Aziende.NumAcquirente $\to$ Acquirenti.Id\\
-% 	Aziende.InformazioniAggiuntive $\to$ Informazioni.Id
-% \end{verse}
-% \textbf{Fornitori} (\underline{Id}, Tipologia)
-% \begin{verse}
-% 	Fornitori.Id $\to$ Aziende.Id
-% \end{verse}
-% \textbf{NegoziInterni} (\underline{Id})
-% \begin{verse}
-% 	NegoziInterni.Id $\to$ Aziende.Id
-% \end{verse}
-% \textbf{Indirizzi} (\underline{Id}, Via, NumeroCivico, Stato, Provincia, Citta, CAP)\\
-% \textbf{Eventi} (\underline{Id}, Titolo, Edizione)\\
-% \textbf{Ospita} (\underline{Evento, Negozio}, Data)
-% \begin{verse}
-% 	Ospita.Evento $\to$ Eventi.Id\\
-% 	Ospita.Negozio $\to$ NegoziInterni.Id
-% \end{verse}
-% \textbf{TemiVino} (\underline{Vino, Evento})
-% \begin{verse}
-% 	TemiVino.Vino $\to$ Vini.Nome\\
-% 	TemiVino.Evento $\to$ Eventi.Id
-% \end{verse}
-% \textbf{Informazioni} (\underline{Id}, Nome, Telefono, Email, Indirizzo)
-% \begin{verse}
-% 	Informazioni.Indirizzo $\to$ Indirizzi.Id
-% \end{verse}
+				\rowcolor[rgb]{.929, .929, .929} \textbf{FornituraUva} (\underline{Uva, DataAcquisto}, Prezzo, Quantita)    \\
+				\midrule
+				FornituraUva.Uva $\to$ Uva.Id                                                                               \\                                \\
+				\midrule
+			\end{tabular}
+		}
+	\end{minipage}
+\end{center}
 
 
-\begin{minipage}{9cm}
-	\leftline{
-		\begin{tabular}{S{9cm}}
-				
-				\textbf{Uva} (\underline{Id}, TipoUva, Fornitore, Annata)
-				\begin{verse}
-					Uva.Fornitore $\to$ Fornitori.Id\\
-					Uva.TipoUva $\to$ TipiUva.Nome
-				\end{verse}
-				\textbf{TipiUva} (\underline{Nome}, Colore)\\
-				\textbf{Vigneti} (\underline{Id}, Indirizzo, TipoUva)
-				\begin{verse}
-					Vigneti.Indirizzo $\to$ Indirizzi.Id\\
-					Vigneti.TipoUva $\to$ TipiUva.Nome
-				\end{verse} 
-				\textbf{Tappi} (\underline{Id}, Forma, Materiale, Quantita, Fornitore)
-				\begin{verse}
-					Tappi.Fornitore $\to$ Fornitori.Id
-				\end{verse}
-				\textbf{Bottiglie} (\underline{Id}, Capacita, Colore, Quantita, Fornitore)
-				\begin{verse}
-					Bottiglie.Fornitore $\to$ Fornitori.Id
-				\end{verse}
-				\textbf{Eventi} (\underline{Id}, Titolo, Edizione)\\
-				\textbf{Corrieri} (\underline{Id}, Nome)\\
-				\textbf{Acquirenti} (\underline{Id})
-			
-		\end{tabular}
-	}
-\end{minipage}
-\begin{minipage}{9cm}
-	\rightline{
-	\begin{tabular}{S{9cm}}
-			\textbf{FornisceUva} (\underline{Uva, DataAcquisto}, Prezzo, Quantita)
-			\begin{verse}
-				FornisceUva.Uva $\to$ Uva.Id
-			\end{verse}
-			\textbf{FornisceTappo} (\underline{Tappo, DataAcquisto}, Prezzo, Quantita)
-			\begin{verse}
-				FornisceTappi.Tappo $\to$ Tappi.Id
-			\end{verse} 
-			\textbf{FornisceBottiglia} (\underline{Bottiglia, DataAcquisto}, Prezzo, Quantita)
-			\begin{verse}
-				FornisceBottiglia.Bottiglia $\to$ Bottiglie.Id
-			\end{verse} 
-			\textbf{LineeProduttive} (\underline{Id}, Nome, Direttore)
-			\begin{verse}
-				LineeProduttive.Direttore $\to$ Dipendenti.CodiceFiscale
-			\end{verse} 
-			\textbf{Macchinari} (\underline{Id}, Nome, DataProssimaManutenzione, DataAcquisto, LineaProduttiva)
-			\begin{verse}
-				Macchinari.LineaProduttiva $\to$ LineeProduttive.Id
-			\end{verse}
-		
-	\end{tabular}
-}
-\end{minipage}
-\begin{minipage}{9cm}
-	\leftline{
-		\begin{tabular}{S{8cm}}
-			\textbf{Dipendenti} (\underline{CodiceFiscale}, Nome, Cognome, Referente)
-			\begin{verse}
-				Dipendenti.Referente $\to$ Dipendenti.CodiceFiscale
-			\end{verse}
-			\textbf{Turni} (\underline{Dipendente, InizioTurno}, FineTurno, LineaProduttiva)
-			\begin{verse}
-				Turni.Dipendente $\to$ Dipendenti.CodiceFiscale\\
-				Turni.LineaProduttiva $\to$ LineeProduttive.Id
-			\end{verse} 
-			\textbf{Ordini} (\underline{Id}, PrezzoTotale *, Data, Acquirente)
-			\begin{verse}
-				Ordini.Acquirente $\to$ Acquirenti.Id
-			\end{verse} 
-			\textbf{Dettagli} (\underline{Ordine, Vino}, QuantitaBottiglie)
-			\begin{verse}
-				Dettagli.Ordine $\to$ Ordini.Id\\
-				Dettagli.Vino $\to$ BottiglieDiVino.Id
-			\end{verse} 
-			\textbf{Spedizioni} (\underline{Ordine, Corriere}, DataSpedizione, DataConsegna, Prezzo)
-			\begin{verse}
-				Spedizioni.Ordine $\to$ Ordini.Id\\
-				Spedizioni.Corriere $\to$ Corrieri.Id
-			\end{verse} 
-			\textbf{Privati} (\underline{Id}, Cognome, InformazioniAggiuntive)
-			\begin{verse}
-				Privati.Id $\to$ Acquirenti.Id\\
-				Privati.InformazioniAggiuntive $\to$ Informazioni.Id
-			\end{verse}
-			\textbf{Ospita} (\underline{Evento, Negozio}, Data)
-			\begin{verse}
+\begin{center}
+	\begin{minipage}[t]{7.5cm}
+		\rightline{
+			\begin{tabular}{P{7.5cm}}
+				\toprule
+				\rowcolor[rgb]{.929, .929, .929} \textbf{FornituraTappo} (\underline{Tappo, DataAcquisto}, Prezzo, Quantita) \\
+				\midrule
+				FornituraTappo.Tappo $\to$ Tappi.Id                                                                          \\                                \\
+				\midrule
+
+				\rowcolor[rgb]{.929, .929, .929} \textbf{LineeProduttive} (\underline{Id}, Nome, Direttore)                  \\
+				\midrule
+				LineeProduttive.Direttore $\to$ Dipendenti.CodiceFiscale                                                     \\                                \\
+				\midrule
+
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Manutenzioni} (\underline{Id}, Macchinario, Azienda, Costo, Data)   \\
+				\midrule
+				Manutenzioni.Macchinario $\to$ Macchinari.Id																 \\
+				\midrule
+				Manutenzioni.Azienda $\to$ Aziende.Id                                                                        \\                                \\
+				\midrule
+
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Dipendenti} (\underline{CodiceFiscale}, Nome, Cognome, Referente)   \\
+				\midrule
+				Dipendenti.Referente $\to$ Dipendenti.CodiceFiscale                                                          \\                                \\
+				\midrule
+
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Dettagli} (\underline{Ordine, Vino}, QuantitaBottiglie)             \\
+				\midrule
+				Dettagli.Ordine $\to$ Ordini.Id                                                                              \\
+				\midrule
+				Dettagli.Vino $\to$ BottiglieDiVino.Id                                                                       \\                                \\
+				\midrule
+
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Fornitori} (\underline{Id}, Tipologia)                              \\
+				\midrule
+				Fornitori.Id $\to$ Aziende.Id                                                                                \\                                \\
+				\midrule
+
+				\rowcolor[rgb]{.929, .929, .929} \textbf{NegoziInterni} (\underline{Id})                                     \\
+				\midrule
+				NegoziInterni.Id $\to$ Aziende.Id                                                                            \\                                \\
+				\midrule
+
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Ospita} (\underline{Evento, Negozio}, Data)                                                    \\
+				\midrule
 				Ospita.Evento $\to$ Eventi.Id\\
-				Ospita.Negozio $\to$ NegoziInterni.Id
-			\end{verse}  
-			\textbf{Fornitori} (\underline{Id}, Tipologia)
-			\begin{verse}
-				Fornitori.Id $\to$ Aziende.Id
-			\end{verse}
-		\end{tabular}
-	}
-\end{minipage}
-\begin{minipage}{9cm}
-	\rightline{
-		\begin{tabular}{S{9cm}}
-				\textbf{NegoziInterni} (\underline{Id})
-				\begin{verse}
-					NegoziInterni.Id $\to$ Aziende.Id
-				\end{verse}
-				\textbf{Aziende} (\underline{Id}, NumAcquirente, PartitaIva, NomeReferente, CognomeReferente, InformazioniAggiuntive)
-				\begin{verse}
-					Aziende.NumAcquirente $\to$ Acquirenti.Id\\
-					Aziende.InformazioniAggiuntive $\to$ Informazioni.Id
-				\end{verse}
-				\textbf{Indirizzi} (\underline{Id}, Via, NumeroCivico, Stato, Provincia, Citta, CAP)\\
-				\textbf{TemiVino} (\underline{Vino, Evento})
-				\begin{verse}
-					TemiVino.Vino $\to$ Vini.Nome\\
-					TemiVino.Evento $\to$ Eventi.Id
-				\end{verse}
-				\textbf{Informazioni} (\underline{Id}, Nome, Telefono, Email, Indirizzo)
-				\begin{verse}
-					Informazioni.Indirizzo $\to$ Indirizzi.Id
-				\end{verse}
-				\textbf{BottiglieDiVino} (\underline{Id}, Vino, Annata, Prezzo, Classificazione, NumBottiglieVendute, NumBottiglieMagazzino, NumBottiglieProdotte, IdTappo, IdBottiglia, IdMagazzino)
-				\begin{verse}
-					(BottiglieDiVino.Vino, BottiglieDiVino.Annata) $\to$ (Vini.Nome, Vini.Uva.Annata)*\\
-					BottiglieDiVino.IdTappo $\to$ Tappi.Id\\
-					BottiglieDiVino.IdBottiglia $\to$ Bottiglie.Id\\
-					BottiglieDiVino.IdMagazzino $\to$ LineeProduttive.Id
-				\end{verse} 
-				\textbf{Vini} (\underline{Nome}, GradazioneAlcolica, TempoFermentazione, StatoProduzione, Uva)
-				\begin{verse}
-					Vini.Uva $\to$ Uva.Id
-				\end{verse} 
-				\textbf{Manutenzioni} (\underline{Id}, Macchinario, Azienda, Costo, Data)
-				\begin{verse}
-					Manutenzioni.Macchinario $\to$ Macchinari.Id\\
-					Manutenzioni.Azienda $\to$ Aziende.Id
-				\end{verse}
-		\end{tabular}
-	}
-\end{minipage}
-\begin{verse}
-	*\emph{Per ovviare al problema del vincolo referenziale fra \textbf{BottiglieDiVino.Annata e Vini.Uva.Annata} e \textbf{Ordini.PrezzoTotale} come somma di \begin{math}(BottiglieDiVino.Prezzo \times Dettagli.QuantitaBottiglie)+ Spedizioni.Prezzo\end{math}} si potrebbe aggiungere un \textbf{TRIGGER}, cosa comunque non richiesta ai fini del progetto.
-\end{verse}
+				\midrule
+	Ospita.Negozio $\to$ NegoziInterni.Id                                                                                                                \\                                \\
+				\midrule
+
+				\rowcolor[rgb]{.929, .929, .929} \textbf{TemiVino} (\underline{Vino, Evento})                                                    \\
+				\midrule
+				TemiVino.Vino $\to$ Vini.Nome\\
+				\midrule
+	TemiVino.Evento $\to$ Eventi.Id                                                                                                                \\                                \\
+				\midrule
+
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Acquirenti} (\underline{Id})                                                                                                              \\                                \\
+				\midrule
+
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Indirizzi} (\underline{Id}, Via, NumeroCivico, Stato, Provincia, Citta, CAP)                                                                                                               \\                                
+				\midrule
+			\end{tabular}
+		}
+	\end{minipage}
+	\hspace{5mm}
+	\begin{minipage}[t]{7.5cm}
+		\rightline{
+			\begin{tabular}{P{7.5cm}}
+				\toprule
+				\rowcolor[rgb]{.929, .929, .929} \textbf{FornituraBottiglia} (\underline{Bottiglia, DataAcquisto}, Prezzo, Quantita)                                   \\
+				\midrule
+				FornituraBottiglia.Bottiglia $\to$ Bottiglie.Id                                                                                                        \\                                \\
+				\midrule
+
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Macchinari} (\underline{Id}, Nome, DataProssimaManutenzione, DataAcquisto, LineaProduttiva)                   \\
+				\midrule
+				Macchinari.LineaProduttiva $\to$ LineeProduttive.Id                                                                                                    \\                                \\
+				\midrule
+
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Turni} (\underline{Dipendente, InizioTurno}, FineTurno, LineaProduttiva)                                      \\
+				\midrule
+				Turni.Dipendente $\to$ Dipendenti.CodiceFiscale                                                                                                        \\
+				\midrule
+				Turni.LineaProduttiva $\to$ LineeProduttive.Id                                                                                                         \\                                \\
+				\midrule
+
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Ordini} (\underline{Id}, PrezzoTotale *, Data, Acquirente)                                                    \\
+				\midrule
+				Ordini.Acquirente $\to$ Acquirenti.Id                                                                                                                  \\                                \\
+				\midrule
+
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Spedizioni} (\underline{Ordine, Corriere}, DataSpedizione, DataConsegna, Prezzo)                              \\
+				\midrule
+				Spedizioni.Ordine $\to$ Ordini.Id                                                                                                                      \\
+				\midrule
+				Spedizioni.Corriere $\to$ Corrieri.Id                                                                                                                  \\                                \\
+				\midrule
+
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Privati} (\underline{Id}, Cognome, InformazioniAggiuntive)                                                    \\
+				\midrule
+				Privati.Id $\to$ Acquirenti.Id                                                                                                                         \\
+				\midrule
+				Privati.InformazioniAggiuntive $\to$ Informazioni.Id                                                                                                   \\                                \\
+				\midrule
+
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Aziende} (\underline{Id}, NumAcquirente, PartitaIva, NomeReferente, CognomeReferente, InformazioniAggiuntive) \\
+				\midrule
+				Aziende.NumAcquirente $\to$ Acquirenti.Id                                                                                                              \\
+				\midrule
+				Aziende.InformazioniAggiuntive $\to$ Informazioni.Id                                                                                                   \\                                \\
+				\midrule
+
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Informazioni} (\underline{Id}, Nome, Telefono, Email, Indirizzo)                                                    \\
+				\midrule
+				Informazioni.Indirizzo $\to$ Indirizzi.Id                                                                                                                \\                                \\
+				\midrule
+
+				\rowcolor[rgb]{.929, .929, .929} \textbf{TipiUva} (\underline{Nome}, Colore)                                                                                                             \\                                \\
+				\midrule
+
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Corrieri} (\underline{Id}, Nome)                                                                                                                \\                                \\
+				\midrule
+
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Eventi} (\underline{Id}, Titolo, Edizione)                                                                                                               \\                                
+				\midrule
+			\end{tabular}
+		}
+	\end{minipage}
+\end{center}
